feat:Feature updated

--- a/ServiceLink/src/main/resources/application.properties
+++ b/ServiceLink/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+spring.jpa.entity.scan.packages=com.example.ServiceLink.entity
 
 # Logging Configuration
 logging.level.org.springframework.web=INFO
