--- a/service-link/package.json
+++ b/service-link/package.json
@@ -3,20 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
-    "@tanstack/react-query": "^5.52.0",
+    "@mui/icons-material": "^6.1.1",
+    "@tanstack/react-query": "^5.53.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "chart.js": "^4.4.4",
+    "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
+    "pdfjs-dist": "^2.11.338",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-calendar-heatmap": "^1.9.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.4",
+    "react-lottie-player": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "service-link": "file:",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
   },
